force-app/main/default/objects/custom_create339__c/custom_create339__c.object-meta.xml
<CustomObject>
    <label>Custom created object339</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects339</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>