force-app/main/default/objects/custom_create339__c/fields/custom_create_339field603__c.field-meta.xml
<CustomField>
    <fullName>custom_create_339field603__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 339field603</label>
    <type>Checkbox</type>
</CustomField>