force-app/main/default/objects/custom_create339__c/fields/custom_create_339field637__c.field-meta.xml
<CustomField>
    <fullName>custom_create_339field637__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 339field637</label>
    <type>Checkbox</type>
</CustomField>